WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259496
REGRESSION(
265561@main
): [ Monterey+ x86_64 ] imported/w3c/web-platform-tests/webcodecs/temporal-svc-encoding.https.any.worker.html?vp9 is a constant failure
https://bugs.webkit.org/show_bug.cgi?id=259496
Summary
REGRESSION(265561@main): [ Monterey+ x86_64 ] imported/w3c/web-platform-tests...
Ben Schwartz
Reported
2023-07-25 14:07:03 PDT
imported/w3c/web-platform-tests/webcodecs/temporal-svc-encoding.https.any.worker.html?vp9 This test is a constant failure on macOS Monterey+ WK2. HISTORY:
https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fwebcodecs%2Ftemporal-svc-encoding.https.any.worker.html%3Fvp9
TEXT DIFF: PASS SVC L1T2 -PASS SVC L1T3 +FAIL SVC L1T3 assert_equals: corrupted_frames: 8 expected 0 but got 1 DIFF URL:
https://build.webkit.org/results/Apple-Ventura-Debug-WK2-GPUProcess-Tests/265564@main%20(3027)/imported/w3c/web-platform-tests/webcodecs/temporal-svc-encoding.https.any.worker_vp9-pretty-diff.html
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-07-25 14:07:24 PDT
<
rdar://problem/112858534
>
Ben Schwartz
Comment 2
2023-07-25 14:10:46 PDT
I was able to reproduce this bug on macOS Ventura using x86_64 running the test as follows: run-webkit-tests imported/w3c/web-platform-tests/webcodecs/temporal-svc-encoding.https.any.worker.html I was also able to bisect a regression point. This test reproduced at
265561@main
, but it did not reproduce at
265560@main
. Changes at
265561@main
are directly related to this error, and is likely what caused the failure.
Ben Schwartz
Comment 3
2023-07-25 14:15:52 PDT
I have marked this test as a constant failure while this issue is investigated. (Link:
https://github.com/WebKit/WebKit/pull/16076
).
Ben Schwartz
Comment 4
2023-07-25 14:42:50 PDT
(In reply to Ben Schwartz from
comment #3
)
> I have marked this test as a constant failure while this issue is > investigated. (Link:
https://github.com/WebKit/WebKit/pull/16076
).
Corrections: - Occurring on Monterey+ x86_64, not Monterey+ WK2. - Corrected pull request link:
https://github.com/WebKit/WebKit/pull/16079
EWS
Comment 5
2023-07-25 15:44:06 PDT
Test gardening commit
266303@main
(072aee3c8516): <
https://commits.webkit.org/266303@main
> Reviewed commits have been landed. Closing PR #16079 and removing active labels.
youenn fablet
Comment 6
2023-10-13 05:49:42 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19044
youenn fablet
Comment 7
2023-10-20 04:34:22 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/42661
EWS
Comment 8
2023-10-20 09:25:39 PDT
Committed
269569@main
(8af9ce4f8d0a): <
https://commits.webkit.org/269569@main
> Reviewed commits have been landed. Closing PR #19044 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug