Cherry-pick 8af9ce4f8d0a. rdar://112858534

REGRESSION(265561@main): [ Monterey+ x86_64 ] imported/w3c/web-platform-tests/webcodecs/temporal-svc-encoding.https.any.worker.html?vp9 is a constant failure
    https://bugs.webkit.org/show_bug.cgi?id=259496
    rdar://112858534

    Reviewed by Eric Carlson.

    The size of the black dots is not always big enough to prevent the encoed black to be closer to neightbored colors.
    To improve the stability of the black dot detection, we increase the size of the black dots.
    We increase the tolerance from 40 to 60 to further improve stability.

    Also, VP9 HW decoder does not handle well SVC in x86_64 platforms.
    When web page asks for SW VP9 decoder, use SW VP9 for these platforms to allow correct use of SVC VP9.

    * LayoutTests/imported/w3c/web-platform-tests/webcodecs/video-encoder-utils.js:
    (putBlackDots):
    (validateBlackDots):
    * LayoutTests/platform/mac-wk2/TestExpectations:
    * Source/WebCore/Modules/webcodecs/WebCodecsVideoDecoder.cpp:
    (WebCore::createVideoDecoderConfig):
    * Source/WebCore/platform/VideoDecoder.h:
    * Source/WebKit/WebProcess/GPU/media/RemoteVideoCodecFactory.cpp:
    (WebKit::shouldUseLocalDecoder):
    (WebKit::RemoteVideoCodecFactory::createDecoder):

    Canonical link: https://commits.webkit.org/269569@main

Canonical link: https://commits.webkit.org/267815.409@safari-7617-branch